--- a/asn1/Cargo.toml
+++ b/asn1/Cargo.toml
@@ -1,14 +1,19 @@
 [package]
-name = "x509"
+name = "asn1"
 version = "0.1.0"
 edition = "2021"
-description = "Tool for describing and manipulating X.509 certificates"
+description = """
+ASN.1 Library
 
-[[bin]]
-name = "x509"
-path = "src/x509.rs"
+Basically just wraps RustCrypto formats package
+
+https://github.com/RustCrypto/formats
+"""
+
+[lib]
+name = "asn1"
+path = "src/lib.rs"
 
 [dependencies]
 x509-cert = { version = "0.2", path = "../formats/x509-cert" }
 const-oid = { version = "0.9.2", features = ["db"] }
-clap = { version = "4", features = ["derive"] }
