--- a/pki/Cargo.toml
+++ b/pki/Cargo.toml
@@ -16,8 +16,7 @@ path = "src/lib.rs"
 
 [dependencies]
 const-oid = { version = "0.9.2", features = ["db"] }
-digest = { version = "0.10" }
-sha1 = { version = "0.10" }
-sha2 = { version = "0.10" }
-rsa = { version = "0.8", default-features = false, features = ["std"] }
-x509-cert = { version = "0.2", path = "../formats/x509-cert" }
+rsa = { version = "0.8.2", default-features = false, features = ["pem", "pkcs5"] }
+sha1 = { version = "0.10.5", default-features = false, features = ["oid"] }
+sha2 = { version = "0.10.6", default-features = false, features = ["oid"] }
+x509-cert = { version = "0.2.1", default-features = false, features = ["pem"] }
