--- a/pki/Cargo.toml
+++ b/pki/Cargo.toml
@@ -15,8 +15,12 @@ name = "pki"
 path = "src/lib.rs"
 
 [dependencies]
-const-oid = { version = "0.9.2", features = ["db"] }
+const-oid = { version = "0.9.2", default-features = false, features = ["db"] }
+der = { version = "0.7.3", default-features = false, features = ["alloc", "derive", "flagset", "oid", "pem"] }
 rsa = { version = "0.8.2", default-features = false, features = ["pem", "pkcs5"] }
 sha1 = { version = "0.10.5", default-features = false, features = ["oid"] }
 sha2 = { version = "0.10.6", default-features = false, features = ["oid"] }
 x509-cert = { version = "0.2.1", default-features = false, features = ["pem"] }
+
+[dev-dependencies]
+rand_chacha = "0.3"
