--- a/tls/Cargo.toml
+++ b/tls/Cargo.toml
@@ -9,4 +9,4 @@ path = "src/tls.rs"
 
 [dependencies]
 rustls = { version = "0.21", features = ["dangerous_configuration", "secret_extraction"] }
-x509-cert = { version = "0.2", path = "../formats/x509-cert" }
+x509-cert = { version = "0.2.1", default-features = false, features = ["pem"] }
